Fixed a margin on mobile + updated footer styling

--- a/src/components/navigation_header_footer/Footer.css
+++ b/src/components/navigation_header_footer/Footer.css
@@ -40,17 +40,18 @@
 }
 
 .footer-header {
-    font-size: 15px;
+    font-size: 18px;
     font-weight: bold;
     font-family: "Rubik", sans-serif;
+    color: #000000A6;
 }
 
 .bottom-menu a {
     margin-bottom: 3%;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 400;
     text-decoration: none;
-    color: #000;
+    color: #000000A6;
     text-rendering: optimizeLegibility;
 }
 
@@ -61,12 +62,10 @@
 
 @media only screen and (max-width: 991px) {
     .footer-header {
-        font-size: 18px;
         margin-bottom: 6%;
     }
     
     .bottom-menu a {
-        font-size: 16px;
         margin-bottom: 5%;
     }
 }
