--- a/src/components/steps/choice/FunctionalityTest.css
+++ b/src/components/steps/choice/FunctionalityTest.css
@@ -2,6 +2,12 @@
     padding-left: 0 !important;
 }
 
+@media only screen and (max-width: 650px) {
+    #functionality-test {
+        margin-top: 30%;
+    }
+}
+
 #functionality-buttons {
     display: flex;
     flex-direction: column;
